--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+.item-1{
+	width:80px;
+	height:80px;
+	background-color:red;
+	font-size:30px;
+}
